--- a/index.html
+++ b/index.html
@@ -55,6 +55,119 @@
                     </div>
                </div>
           </section>
+          <!-- what i do section -->
+          <section class="What-i-do">
+               <h3 class="section-title">What I Do</h3>
+               <p class="section-title">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+               <div class="skills-container">
+                    <div class="skill">
+                         <img src="images/icons/js.png" alt="">
+                         <p class="skill-title">Vanilla JavaScript</p>
+                         <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quas perferendis possimus. Quos, nihil sapiente!</p>
+                    </div>
+                    <div class="skill">
+                         <img src="images/icons/react.png" alt="">
+                         <p class="skill-title">React</p>
+                         <p class="skill-description">A cumque quibusdam soluta, repudiandae ex ducimus porro reprehenderit quis ullam, magnam ut nam magni.</p>
+                    </div>
+                    <div class="skill">
+                         <img src="images/icons/nodejs.png" alt="">
+                         <p class="skill-title">Node JS</p>
+                         <p class="skill-description">Cumque exercitationem dolorum consequuntur blanditiis minus explicabo totam. Dicta placeat ex quia assumenda accusantium quidem.</p>
+                    </div>
+                    <div class="skill">
+                         <img src="images/icons/mongo.png" alt="">
+                         <p class="skill-title">Mongodb</p>
+                         <p class="skill-description">Architecto provident rerum commodi eaque! Beatae laudantium eaque, reiciendis explicabo sunt nisi quisquam fugiat facilis!</p>
+                    </div>
+               </div>
+          </section>
+          <!-- Resume Section -->
+          <section class="resume">
+               <h3 class="section-title">A summary of My Resume</h3>
+              <div class="resume-content">
+               <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                         <h4 class="title">Master in Computer Engineering</h4>
+                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                         <p class="description">List skill/technologies here. You can change the icon above 
+                              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                         <h4 class="title">Master in Computer Engineering</h4>
+                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                         <p class="description">List skill/technologies here. You can change the icon above 
+                              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                         <h4 class="title">Master in Computer Engineering</h4>
+                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                         <p class="description">List skill/technologies here. You can change the icon above 
+                              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    
+               </div>
+               <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                         <h4 class="title">Master in Computer Engineering</h4>
+                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                         <p class="description">List skill/technologies here. You can change the icon above 
+                              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                         <h4 class="title">Master in Computer Engineering</h4>
+                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                         <p class="description">List skill/technologies here. You can change the icon above 
+                              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                         <h4 class="title">Master in Computer Engineering</h4>
+                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                         <p class="description">List skill/technologies here. You can change the icon above 
+                              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    
+               </div>
+              </div>
+              <div class="resume-button">
+               <button class="btn-primary">Download CV</button>
+              </div>
+          </section>
+          <!-- contact section -->
+          <section class="contact">
+               <div>
+                   <h3 class="section-title">Let's Connect</h3>
+                   <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                   <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                   </a>
+                   <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                   </a>
+                   <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                   </a>
+               </div>
+               <div>
+                   <h3 class="section-title">Let's Message me</h3>
+                   <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea class="Message" name="" id="" cols="30" rows="10" placeholder="Message
+                    "></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                   </form> 
+               </div>
+          </section>
      </main>
+     <footer>
+
+     </footer>
 </body>
 </html>
